<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="equationPrev">Equation Will Appear Here</string>
    <string name="btn01">1</string>
    <string name="btn02">2</string>
    <string name="btn03">3</string>
    <string name="btnPlus">+</string>
    <string name="btn04">4</string>
    <string name="btn05">5</string>
    <string name="btn06">6</string>
    <string name="btnMinus">-</string>
    <string name="btn07">7</string>
    <string name="btn08">8</string>
    <string name="btn09">9</string>
    <string name="btnDivide">/</string>
    <string name="btnClear">C</string>
    <string name="btn00">0</string>
    <string name="btnDot">.</string>
    <string name="btnMultiply">*</string>
    <string name="btnResult">=</string>
    <string name="baseConverter">Go to Base Converter</string>

    <string name="baseConverterTitle">Base Converter</string>
    <string name="inputBase">Select Base of Input</string>
    <string name="converterInput">Enter a number in specified base</string>
    <string name="converterCalculate">Calculate</string>
    <string name="decimal">Decimal</string>
    <string name="binary">Binary</string>
    <string name="hex">Hex</string>
    <string name="octal">Octal</string>

    <string name="binaryConversion">Binary Conversion</string>
    <string name="decimalConvertion">Decimal Conversion</string>
    <string name="hexConversion">Hex Conversion</string>
    <string name="octalConversion">Octal Conversion</string>

    <string name="calculator">Go to Calculator</string>

</resources>
